<resources>
    <string name="app_name">MyStudyProject</string>
    <string name="home_page">首页</string>
    <string name="about_notification">通知栏相关</string>
    <string name="show_simple_notification">显示一个简单的通知信息</string>
    <string name="simple_notification">简单的通知消息</string>
    <string name="progress_notification">在通知栏显示进度条</string>
    <string name="other_notification">其它类型的通知</string>
    <string name="send_notification">发送通知</string>
    <string name="expanded_notification_big_picture">展开式通知——添加大图片</string>
    <string name="add_big_picture">添加大图片的通知</string>
    <string name="expanded_notification_big_text">展开式通知——添加大段文本</string>
    <string name="add_big_text">添加大段文本的通知</string>
    <string name="big_text">
        这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本这里是大段文本
    </string>
    <string name="more_style_big_text">
        这是一段普通的文本，&lt;b>这是一段加粗的文本&lt;/b>&lt;em>这是强调的内容，目前使用斜体展示&lt;/em>
        &lt;i>斜体则是这样的&lt;/i>&lt;cite>这样也行&lt;/cite>&lt;dfn>要不然用这样&lt;/dfn>
        &lt;big>还可以把字体变大&lt;/big>&lt;small>变小也不是问题&lt;/small>
        &lt;font color="red" face="monospace">还可以改变颜色和字体&lt;/font>&lt;br/>
        &lt;tt>而等宽字体则是这样的&lt;/tt>
        &lt;s>删除线&lt;/s>&lt;strike>删除线&lt;/strike>&lt;del>删除线&lt;/del>
        &lt;u>下划线&lt;/u>
    </string>
    <string name="expanded_notification_more_line">展开式通知——收件箱样式的通知</string>
    <string name="add_more_line">收件箱样式的通知</string>
    <string name="expanded_notification_messaging_style">展开式通知 —— 显示对话</string>
    <string name="add_messaging_notification">显示对话的通知</string>
    <string name="expanded_notification_media_style">展开式通知 —— 使用媒体控件创建通知</string>
    <string name="add_media_notification">显示媒体通知</string>
    <string name="group_notification">创建一组通知</string>
    <string name="add_new_notification_to_group">向某个组中添加新通知</string>
    <string name="create_manage_notification_channel">创建和管理通知渠道</string>
    <string name="create_a_high_notification_channel">创建一个强提醒的通知渠道</string>
    <string name="create_a_low_notification_channel">创建一个弱提醒的通知渠道</string>
    <string name="send_a_high_alarm_notification">发送一个强提醒通知</string>
    <string name="send_a_low_alarm_notification">发送一个弱提醒通知</string>
    <string name="read_high_notification_channel_info">读取强提醒通知渠道的信息</string>
    <string name="open_notification_channel_setting">打开通知渠道设置页面</string>
    <string name="create_notification_channel_group">创建通知渠道分组</string>
    <string name="create_channel_test_channel_group">创建用于测试渠道分组的通知渠道</string>
    <string name="send_work_receive_message_notification">发送工作账号下接收消息的通知</string>
    <string name="basic_summary">基础操作总结</string>
    <string name="send_basic_notification">发送一个基本的通知栏消息</string>
    <string name="create_notification_channel_group_test">测试创建渠道分组</string>
    <string name="delay_send_notification">延迟发送一条通知</string>
    <string name="test_notification_group">测试通知分组</string>
    <string name="add_test_notification_group">添加测试通知分组的通知</string>
    <string name="test_to_activity">测试跳转Activity</string>
    <string name="test_to_activity_with_task_stack_builder">测试使用TaskStackBuilder跳转Activity</string>
    <string name="about_animation">动画相关</string>
    <string name="animation_home">动画首页</string>
    <string name="property_animation">属性动画</string>
    <string name="property_animation_basic">属性动画基本操作</string>
    <string name="use_value_animator">使用ValueAnimator添加动画效果</string>
    <string name="use_value_animator_of_object">使用ValueAnimator.ofObject添加动画效果</string>
    <string name="use_value_animator_to_margin">使用ValueAnimator改变View的左右Margin</string>
    <string name="use_object_animator_to_move">使用ObjectAnimator移动View</string>
    <string name="use_animator_set">使用AnimatorSet编排多个动画</string>
    <string name="add_animator_to_view_group">为ViewGroup添加布局更改时的动画</string>
    <string name="load_animator_with_xml">从XML文件中加载动画资源并设置到View上</string>
    <string name="load_animation_with_xml">从XML文件中加载视图动画资源并设置到View上</string>
    <string name="use_my_interpolator">使用自定义的插值器</string>
    <string name="load_animation_list_with_XML">从XML文件中加载逐帧动画并设置到View上</string>
    <string name="use_state_list_animator">使用StateListAnimator为视图状态更改添加动画</string>
    <string name="use_my_type_evaluator_implement_margin">使用自定义的TypeEvaluator</string>
    <string name="use_property_values_holder">使用PropertyValuesHolder设置动画</string>
    <string name="use_key_frame">使用关键帧来构建动画</string>
    <string name="use_animator_set_more_animator">使用组合动画实现View向右移动一半宽度并变为2倍大小</string>
    <string name="use_property_values_holder_more_animator">使用PropertyValuesHolder实现View向右移动一半宽度并变为2倍大小</string>
    <string name="use_view_property_animator_more_animator">使用ViewPropertyAnimator实现View向右移动一半宽度并变为2倍大小</string>
    <string name="use_animator_show_or_hide_view">使用动画显示或隐藏视图</string>
    <string name="use_fade_in_fade_out_animator">下面是使用淡入淡出动画</string>
    <string name="test_use_fade_in_fade_out_animator_text">
        这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，
        这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，
        这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，
        这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，
        这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，
        这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，这里是测试使用淡入淡出动画时的文本，
    </string>
    <string name="card_front">卡片正面</string>
    <string name="show_card_front">显示卡片正面</string>
    <string name="show_card_back">显示卡片背面</string>
    <string name="show_view_with_circle_animator">使用圆形揭露动画显示视图</string>
    <string name="hide_view_with_circle_animator">使用圆形揭露动画隐藏视图</string>
    <string name="use_animator_move_view">使用动画移动视图</string>
    <string name="move_in_x">横向移动</string>
    <string name="move_in_y">纵向移动</string>
    <string name="move_together">同时移动</string>
    <string name="i_am_move_view">我是被移动的View</string>
    <string name="use_path_interpolator_move_view">使用PathInterpolator移动视图</string>
    <string name="use_animator_implement_animator_path">使用ObjectAnimator来实现自定义的动画路径</string>
    <string name="use_path_interpolator_create_fall_anim">使用PathInterpolator创建跌落动画</string>
    <string name="create_fling_animation">创建一个投掷动画</string>
    <string name="create_simple_spring_animation">创建一个简单的弹性动画</string>
    <string name="create_spring_aniamtion_register_listener">创建弹性动画并注册监听器</string>
    <string name="create_spring_animation_set_spring_force">创建弹性动画并设置阻尼比</string>
    <string name="layout_change_add_animation">为布局修改添加动画</string>
    <string name="add_view_into_linear_layout">添加View到布局中</string>
    <string name="this_is_add_view">这是添加进来的View</string>
    <string name="set_custom_layout_change_animation">设置自定义的布局更改动画</string>
    <string name="use_transition_animation">使用过渡动画</string>
    <string name="use_scene_change_layout">使用场景切换布局</string>
    <string name="change_first_layout">切换第一个布局</string>
    <string name="change_second_layout">切换第二个布局</string>
    <string name="create_scene_with_code">使用代码创建场景</string>
    <string name="create_scene_function">创建场景操作</string>
    <string name="use_transition_with_resource">使用在资源文件中创建的过渡实例</string>
    <string name="remove_transition_target">移除不想应用过渡效果的视图</string>
    <string name="add_transition_target">添加想要应用过渡效果的视图</string>
    <string name="use_transition_set_change_layout">使用过渡集更改布局</string>
    <string name="use_transition_in_current_layout">当前布局添加或者删除View时使用过渡</string>
    <string name="listenering_transition_life">监听过渡的生命周期</string>
    <string name="use_custom_transition">使用自定义过渡</string>
    <string name="show_first_layout_with_custom_transition">使用自定义过渡显示第一个布局</string>
    <string name="launch_activity_with_animation">使用动画启动Activity</string>
    <string name="custom_view">自定义View</string>
    <string name="custom_view_home">自定义View首页</string>
    <string name="simple_custom_view">一些简单的自定义View</string>
    <string name="rect_study">矩形RectF和Rect学习</string>
    <string name="path_study">Path学习</string>
    <string name="draw_text_study">绘制文本学习</string>
    <string name="glide_study">Glide学习</string>
    <string name="service_study">Service学习</string>
    <string name="service_study_home">Service学习首页</string>
    <string name="service_lifecycle">Service的生命周期</string>
    <string name="start_service_with_start">通过startService()启动一个服务</string>
    <string name="start_service_with_bind">通过bindService()绑定一个服务</string>
    <string name="to_next_page">跳转到下个页面</string>
    <string name="stop_service_with_stop">通过stopService()终止服务</string>
    <string name="unbind_service_1">解除第一个绑定的服务</string>
    <string name="unbind_service_2">解除第二个绑定的服务</string>
    <string name="intent_service_study">IntentService学习</string>
    <string name="start_intent_service">启动IntentService</string>
    <string name="try_bind_intent_service">尝试绑定IntentService</string>
    <string name="try_get_intent_service_value_with_interface">尝试通过接口回调数据</string>
    <string name="aidl_study">AIDL学习</string>
    <string name="connect_service">连接服务</string>
    <string name="get_all_books">获取全部书籍</string>
    <string name="add_book">添加一本书籍</string>
    <string name="storage_home">存储首页</string>
    <string name="storage_overview">存储概览</string>
    <string name="ok_http_study">OkHttp学习</string>
    <string name="ok_http_study_home">OkHttp学习首页</string>
    <string name="ok_http_basic_usage">OkHttp基本用法</string>
    <string name="input_send_get_request_address">输入GET请求的网址</string>
    <string name="default_get_address">http://www.baidu.com</string>
    <string name="send_get_request">发送一个GET请求</string>
    <string name="send_post_request">发送一个post请求</string>
    <string name="rx_java_study">RxJava学习</string>
    <string name="rx_java_study_home">RxJava学习首页</string>
    <string name="rx_java_basic_implement">基本实现</string>
    <string name="rx_java_creator_operator">RxJava创建操作符</string>
    <string name="rx_java_create_operator">RxJava创建操作符—create()</string>
    <string name="rx_java_just_operator">RxJava创建操作符—just()</string>
    <string name="rx_java_from_array_operator">RxJava创建操作符—fromArray()</string>
    <string name="rx_java_from_iterable_operator">RxJava创建操作符—fromIterable()</string>
    <string name="rx_java_never_operator">RxJava创建操作符—never()</string>
    <string name="rx_java_empty_operator">RxJava创建操作符—empty()</string>
    <string name="rx_java_error_operator">RxJava创建操作符—error()</string>
    <string name="rx_java_defer_operator">RxJava创建操作符—defer()</string>
    <string name="rx_java_timer_operator">RxJava创建操作符—timer()</string>
    <string name="rx_java_interval_operator">RxJava创建操作符—interval()</string>
    <string name="rx_java_interval_range_operator">RxJava创建操作符—intervalRange()</string>
    <string name="rx_java_range_operator">RxJava创建操作符—range()</string>
    <string name="rx_java_range_long_operator">RxJava创建操作符—rangeLong()</string>
    <string name="rx_java_transform_operator">RxJava变换操作符</string>
    <string name="rx_java_map_operator">RxJava变换操作符—map()</string>
    <string name="rx_java_flat_map_operator">RxJava变换操作符—flatMap()</string>
    <string name="rx_java_concat_map_operator">RxJava变换操作符—concatMap()</string>
    <string name="rx_java_buffer_operator">RxJava变换操作符—buffer()</string>
    <string name="sp_study">SharedPreference学习</string>
    <string name="sp_study_home">SharedPreference学习首页</string>
    <string name="sp_get_and_save_package_name">存取包名</string>
    <string name="activity_study_tag">ActivityStudyTag</string>
    <string name="activity_study">Activity学习</string>
    <string name="activity_study_home">Activity学习首页</string>
    <string name="lifecycle_method">生命周期方法</string>
    <string name="first_activity">第一个Activity</string>
    <string name="second_activity">第二个Activity</string>
</resources>