<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".rx_java_study.RxJavaCreatorOperatorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/match_parent"
            android:background="@color/color_white">

        <include
                android:id="@+id/layout_title"
                layout="@layout/layout_title"
                app:title="@{@string/rx_java_creator_operator}" />

        <ScrollView
                style="@style/match_parent_constrain"
                android:fillViewport="true"
                android:overScrollMode="never"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_title">

            <androidx.constraintlayout.widget.ConstraintLayout style="@style/match_parent">

                <!--create()-->
                <Button
                        android:id="@+id/btn_create"
                        style="@style/ButtonStyle"
                        android:onClick="doClick"
                        android:text="@string/rx_java_create_operator"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <!--just()-->
                <Button
                        android:id="@+id/btn_just"
                        style="@style/ButtonStyle"
                        android:onClick="doClick"
                        android:text="@string/rx_java_just_operator"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_create" />

                <!--fromArray-->
                <Button
                        android:id="@+id/btn_from_array"
                        style="@style/ButtonStyle"
                        android:onClick="doClick"
                        android:text="@string/rx_java_from_array_operator"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_just" />

                <!--fromIterable-->
                <Button
                        android:id="@+id/btn_from_iterable"
                        style="@style/ButtonStyle"
                        android:onClick="doClick"
                        android:text="@string/rx_java_from_iterable_operator"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_from_array" />

                <!--never-->
                <Button
                        android:id="@+id/btn_never"
                        style="@style/ButtonStyle"
                        android:onClick="doClick"
                        android:text="@string/rx_java_never_operator"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_from_iterable" />

                <!--empty-->
                <Button
                        android:id="@+id/btn_empty"
                        style="@style/ButtonStyle"
                        android:onClick="doClick"
                        android:text="@string/rx_java_empty_operator"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_never" />

                <!--error-->
                <Button
                        android:id="@+id/btn_error"
                        style="@style/ButtonStyle"
                        android:onClick="doClick"
                        android:text="@string/rx_java_error_operator"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_empty" />

                <!--defer-->
                <Button
                        android:id="@+id/btn_defer"
                        style="@style/ButtonStyle"
                        android:onClick="doClick"
                        android:text="@string/rx_java_defer_operator"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_error" />

                <!--timer-->
                <Button
                        android:id="@+id/btn_timer"
                        style="@style/ButtonStyle"
                        android:onClick="doClick"
                        android:text="@string/rx_java_timer_operator"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_defer" />

                <!--internal-->
                <Button
                        android:id="@+id/btn_interval"
                        style="@style/ButtonStyle"
                        android:onClick="doClick"
                        android:text="@string/rx_java_interval_operator"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_timer" />

                <!--intervalRange-->
                <Button
                        android:id="@+id/btn_interval_range"
                        style="@style/ButtonStyle"
                        android:onClick="doClick"
                        android:text="@string/rx_java_interval_range_operator"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_interval" />

                <!--range-->
                <Button
                        android:id="@+id/btn_range"
                        style="@style/ButtonStyle"
                        android:onClick="doClick"
                        android:text="@string/rx_java_range_operator"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_interval_range" />

                <!--rangeLong-->
                <Button
                        android:id="@+id/btn_range_long"
                        style="@style/ButtonStyle"
                        android:onClick="doClick"
                        android:text="@string/rx_java_range_long_operator"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_range" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>