<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".service.intent_service.IntentServiceStudyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/match_parent"
        android:background="@color/color_white">

        <include
            android:id="@+id/layout_title"
            layout="@layout/layout_title"
            app:title="@string/intent_service_study" />

        <Button
            android:id="@+id/btn_start_intent_service"
            style="@style/ButtonStyleConstrain"
            android:onClick="doClick"
            android:text="@string/start_intent_service"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_title" />

        <Button
            android:id="@+id/btn_bind_intent_service"
            style="@style/ButtonStyleConstrain"
            android:onClick="doClick"
            android:text="@string/try_bind_intent_service"
            app:layout_constraintTop_toBottomOf="@id/btn_start_intent_service"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>